chore: Migration to Jackson 3, ref: NOISSUE